--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -14,16 +14,16 @@
     <script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script> <!-- # NOQA -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css"> <!-- # NOQA -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!-- # NOQA -->
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
   </head>
   <body>
     <header class="page-header">
       <a href="/">
   	    <picture>
-          <source srcset="images/coding@1x.png" media="(max-width: 400px)">
-		  <source srcset="images/coding@15x.png" media="(min-width: 401px) and (max-width: 1024px)">
-          <source srcset="images/coding@2x.png">
-          <img src="images/coding@2x.png" alt="coding icon" style="width:50%;">
+          <source srcset="img/coding@1x.png" media="(max-width: 400px)">
+		  <source srcset="img/coding@15x.png" media="(min-width: 401px) and (max-width: 1024px)">
+          <source srcset="img/coding@2x.png">
+          <img src="img/coding@2x.png" alt="coding icon" style="width:50%;">
         </picture>
       </a>
       <h1 class="header__title">
@@ -38,7 +38,7 @@
     <div class="container-fluid">
         <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Blog</a></li>
+            <li><a href="#">Github</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
     </div>
@@ -53,26 +53,29 @@
                 <h3 class="section__title">Featured Work</h3>
                 <div class="flex-container">
                     <div>
-                        <img src="./images/porsche-model.png" alt="Porsche 911 GT2" class="item-image" />
+                        <img src="./img/porsche-model.png" alt="Porsche 911 GT2" class="item-image" />
                         <span class="section__subtitle">Cars</span>
+						<p>Subtle design that improves performance and enhances exterior beauty.</p>
                     </div>
                     <div>
-                        <img src="./images/astonmartinboat.jpg" alt="Aston Martin Boat" class="item-image" />
+                        <img src="./img/astonmartinboat.jpg" alt="Aston Martin Boat" class="item-image" />
                         <span class="section__subtitle">Boats</span>
+						<p>Boat lettering or graphics, wrapping, registration numbers, hailing ports, decals and more.</p>
                     </div>
                     <div>
-                        <img src="./images/MusicFreepik.jpg" alt="Designed by Freepik" class="item-image">
+                        <img src="./img/MusicFreepik.jpg" alt="Designed by Freepik" class="item-image">
                         <span class="section__subtitle">Music</span>
+						<p>Video and music editing, flyers, brochures and and any other media needed to your presentation.</p>
                     </div>
                 </div>
             </article>
       </section>
       <footer>
         <ul>
-          <li><a target="_blank" href="#" class="fa fa-envelope"></a></li>
-          <li><a target="_blank" href="https://twitter.com/luiz_mn" class="fa fa-twitter"></a></li>
-          <li><a target="_blank" href="https://github.com/luizmn" class="fa fa-github"></a></li>
-          <li><a target="_blank" href="#" class="fa fa-linkedin-square"></a></li>		  
+          <li><a target="_blank" href="mailto:someone@example.com" class="fa fa-envelope"></a></li>
+          <li><a target="_blank" href="https://twitter.com/" class="fa fa-twitter"></a></li>
+          <li><a target="_blank" href="https://github.com/" class="fa fa-github"></a></li>
+          <li><a target="_blank" href="https://www.linkedin.com" class="fa fa-linkedin-square"></a></li>
         </ul>
       </footer>
     </main>
